# boox

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
src/: floatingzone.cpp  floatingzone.h  main.cpp  mainwindow.cpp  mainwindow.h
src/features/contextmenu/: contextmenu.cpp  contextmenu.h
src/features/dragdrop/: dragdrop.cpp  dragdrop.h
src/features/fileops/: fileops.cpp  fileops.h
